--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-<h1>
- 
-</h1>
-
-<p>
-
-</p>
-
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <p>
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima
+      accusantium omnis modi sed nostrum quidem, iure optio neque quod
+      obcaecati?
+    </p>
   </body>
 </html>
