--- a/index.html
+++ b/index.html
@@ -7,11 +7,117 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>Lorem ipsum dolor sit amet.</h1>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima
-      accusantium omnis modi sed nostrum quidem, iure optio neque quod
-      obcaecati?
-    </p>
+    <!-- Header -->
+    <header>
+      <nav>
+        <a href="/">
+          <img src="./images/wslogo.svg" alt="web studio logo" />
+        </a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
+        </ul>
+      </nav>
+    </header>
+    <!-- Hero -->
+
+    <main>
+      <section>
+        <h1>Effective Solutions for Your Business</h1>
+        <a href="">Order Service</a>
+      </section>
+
+      <!-- Who We Are -->
+      <section>
+        <h2>Who We Are</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <!-- What Are We Doing -->
+      <section>
+        <h2>What Are We Doing</h2>
+        <img src="./images/desktop.png" alt="desktop" width="360" />
+        <img src="./images/phoneapps.png" alt="smartphone" width="360" />
+        <img
+          src="./images/desktopandphone.png"
+          alt="both combined"
+          width="360"
+        />
+      </section>
+
+      <!-- Our Team -->
+
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src="./images/mg.png" alt="Mark Guerrero photo" width="260" />
+            <h3>Mark Guerrero</h3>
+            <h4>Product Designer</h4>
+          </li>
+          <li>
+            <img src="./images/tf.png" alt="Tom Ford photo" width="260" />
+            <h3>Tom Ford</h3>
+            <h4>Frontend Developer</h4>
+          </li>
+          <li>
+            <img src="./images/cg.png" alt="Camila Garcia photo" width="260" />
+            <h3>Camila Garcia</h3>
+            <h4>Marketing</h4>
+          </li>
+          <li>
+            <img src="./images/dw.png" alt="Daniel Wilson photo" width="260" />
+            <h3>Daniel Wilson</h3>
+            <h4>UI Designer</h4>
+          </li>
+        </ul>
+      </section>
+    </main>
+
+    <!-- Footer -->
+
+    <footer>
+      <a href="/">
+        <img src="./images/wslogo.svg" alt="web studio logo" />
+      </a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
