--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="/">
-          <img src="./images/wslogo.svg" alt="web studio logo" />
-        </a>
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
       </nav>
     </header>
     <!-- Hero -->
@@ -29,7 +29,7 @@
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <a href="">Order Service</a>
+        <button type="button">Order Service</button>
       </section>
 
       <!-- Who We Are -->
@@ -69,14 +69,22 @@
 
       <!-- What Are We Doing -->
       <section>
-        <h2>What Are We Doing</h2>
-        <img src="./images/desktop.png" alt="desktop" width="360" />
-        <img src="./images/phoneapps.png" alt="smartphone" width="360" />
-        <img
-          src="./images/desktopandphone.png"
-          alt="both combined"
-          width="360"
-        />
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img src="./images/desktop.png" alt="desktop" width="360" />
+          </li>
+          <li>
+            <img src="./images/phoneapps.png" alt="smartphone" width="360" />
+          </li>
+          <li>
+            <img
+              src="./images/desktopandphone.png"
+              alt="both combined"
+              width="360"
+            />
+          </li>
+        </ul>
       </section>
 
       <!-- Our Team -->
@@ -85,24 +93,24 @@
         <h2>Our Team</h2>
         <ul>
           <li>
-            <img src="./images/mg.png" alt="Mark Guerrero photo" width="260" />
+            <img src="./images/mg.jpg" alt="Mark Guerrero photo" width="264" />
             <h3>Mark Guerrero</h3>
-            <h4>Product Designer</h4>
+            <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/tf.png" alt="Tom Ford photo" width="260" />
+            <img src="./images/tf.jpg" alt="Tom Ford photo" width="264" />
             <h3>Tom Ford</h3>
-            <h4>Frontend Developer</h4>
+            <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/cg.png" alt="Camila Garcia photo" width="260" />
+            <img src="./images/cg.jpg" alt="Camila Garcia photo" width="264" />
             <h3>Camila Garcia</h3>
-            <h4>Marketing</h4>
+            <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/dw.png" alt="Daniel Wilson photo" width="260" />
+            <img src="./images/dw.jpg" alt="Daniel Wilson photo" width="264" />
             <h3>Daniel Wilson</h3>
-            <h4>UI Designer</h4>
+            <p>UI Designer</p>
           </li>
         </ul>
       </section>
