--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="/index.html">WebStudio</a>
+        <a href="/index.html">
+          <img src="./images/wslogo.svg" alt="Logo" />WebStudio</a
+        >
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
-        <address>
-          <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-          </ul>
-        </address>
       </nav>
+
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <!-- Hero -->
 
@@ -72,14 +75,14 @@
         <h2>What are we doing</h2>
         <ul>
           <li>
-            <img src="./images/desktop.png" alt="desktop" width="360" />
+            <img src="./images/desktop.jpg" alt="desktop" width="360" />
           </li>
           <li>
-            <img src="./images/phoneapps.png" alt="smartphone" width="360" />
+            <img src="./images/phoneapps.jpg" alt="smartphone" width="360" />
           </li>
           <li>
             <img
-              src="./images/desktopandphone.png"
+              src="./images/desktopandphone.jpg"
               alt="both combined"
               width="360"
             />
@@ -119,9 +122,9 @@
     <!-- Footer -->
 
     <footer>
-      <a href="/">
-        <img src="./images/wslogo.svg" alt="web studio logo" />
-      </a>
+      <a href="/index.html">
+        <img src="./images/wslogo.svg" alt="Logo" />WebStudio</a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
