--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <!-- Header -->
     <header>
       <nav>
-        <a href="/index.html">
-          <img src="./images/wslogo.svg" alt="Logo" />WebStudio</a
-        >
+        <a href="/index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
@@ -122,9 +120,7 @@
     <!-- Footer -->
 
     <footer>
-      <a href="/index.html">
-        <img src="./images/wslogo.svg" alt="Logo" />WebStudio</a
-      >
+      <a href="/index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
